[package]
name = "global-supertrees"
version = "0.1.0"
authors = ["Stephan Heijl <sheijl@bio-prodict.nl>"]
license = " CC-BY-NC-SA-4.0"
description = "A package containing code for generating global supertrees from protein alignment trees."

[lib]
name = "global_supertrees"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "merge_trees"
path = "src/bin/bin.rs"

[dependencies]
ndarray = { version = "0.12.1" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rayon = "1.0"
petgraph = "0.4.13"
regex = "1"
half = { version = "1.3.0" }

[dependencies.pyo3]
version = "0.5.2"
features = ["extension-module"]

[dependencies.numpy]
version = "0.4.1"
features = ["python3"]

[features]
singlecore = []
