[package]
name = "global-supertrees"
version = "0.1.0"
authors = ["Stephan Heijl <sheijl@bio-prodict.nl>"]
license = " CC-BY-NC-SA-4.0"
edition = "2018"
description = "A package containing code for generating global supertrees from protein alignment trees."

[lib]
name = "global_supertrees"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "merge_trees"
path = "src/bin/bin.rs"

[dependencies]
ndarray = { version = "0.13.0", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rayon = "1.1"
petgraph = "0.4.13"
regex = "1"
rand = "0.7"
half = { version = "1.3.0" }

[dependencies.pyo3]
version = "0.8.1"
features = ["extension-module"]

[dependencies.numpy]
version = "0.7"
features = ["python3"]

[features]
singlecore = []
